[Fix][Test] Ignore MySQL connector cleanup thread to avoid false positives